--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@ Rechargez en ligne votre cagnotte par paiement carte bancaire. Rendez-vous en ag
         <div class="row section-header" data-aos="fade-up">
             <div class="col-full">
                 <h3 class="subhead">Mon compte unique</h3>
-                <h1 class="display-1">Découvrez les fonctionnalités d'un compte unique en images</h1>
+                <h1 class="display-1">Découvrez les fonctionnalités d'un compte unique</h1>
             </div>
         </div> <!-- end section-header -->
 
@@ -270,7 +270,7 @@ Rechargez en ligne votre cagnotte par paiement carte bancaire. Rendez-vous en ag
                         </div>
 
                         <a href="" class="item-folio__project-link" title="Project link">
-                            Etape 1!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
+                            Etape 1
                         </a>
                         <div class="item-folio__caption">
                             <p></p>
@@ -283,10 +283,7 @@ Rechargez en ligne votre cagnotte par paiement carte bancaire. Rendez-vous en ag
                     <div class="item-folio">
                         
                         <div class="item-folio__thumb">
-                            <a href="images/portfolio/gallery/g-liberty.jpg" class="thumb-link" title="" data-size="1050x700">
-                                <img src="images/portfolio/liberty.jpg"
-                                     srcset="images/portfolio/liberty.jpg 1x, images/portfolio/liberty@2x.jpg 2x" alt="">
-                            </a>
+              <!-- HEREEEEEEEEEEEEeee -->
                         </div>
 
                         <div class="item-folio__text">
@@ -298,7 +295,7 @@ Rechargez en ligne votre cagnotte par paiement carte bancaire. Rendez-vous en ag
                         </div>
 
                         <a href="" class="item-folio__project-link" title="Project link">
-                            Etape 2!!!!!!!!!!!!!!!!!!!!!
+                            Etape 2
                         </a>
 
                         <span class="item-folio__caption">
@@ -327,7 +324,7 @@ Rechargez en ligne votre cagnotte par paiement carte bancaire. Rendez-vous en ag
                         </div>
 
                         <a href="" class="item-folio__project-link" title="Project link">
-                            Etape 3!!!!!!!!!!!!!!!!!!!!!!!!!
+                            Etape 3
                         </a>
 
                         <span class="item-folio__caption">
@@ -356,7 +353,7 @@ Rechargez en ligne votre cagnotte par paiement carte bancaire. Rendez-vous en ag
                         </div>
 
                         <a href="" class="item-folio__project-link" title="Project link">
-                            Etape 4!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
+                            Etape 4
                         </a>
 
                         <span class="item-folio__caption">
@@ -387,7 +384,7 @@ Rechargez en ligne votre cagnotte par paiement carte bancaire. Rendez-vous en ag
                         </div>
 
                         <a href="" class="item-folio__project-link" title="Project link">
-                            Etape 5!!!!!!!!!!!!!!!!!!!!!!!!!!!
+                            Etape 5
                         </a>
 
                         <span class="item-folio__caption">
@@ -417,7 +414,7 @@ Rechargez en ligne votre cagnotte par paiement carte bancaire. Rendez-vous en ag
                         </div>
 
                         <a href="" class="item-folio__project-link" title="Project link">
-                            Etape 6!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
+                            Etape 6
                         </a>
 
                         <span class="item-folio__caption">
