--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@ Rechargez en ligne votre cagnotte par paiement carte bancaire. Rendez-vous en ag
 
                         <div class="item-folio__text">
                             <h3 class="item-folio__title">
-                               4.	Trouver un point services de proximité
+                             Trouver un point services de proximité
                             </h3>
                             <p class="item-folio__cat">
                             </p>
@@ -427,7 +427,7 @@ Rechargez en ligne votre cagnotte par paiement carte bancaire. Rendez-vous en ag
             </div>
             <div class="col-block stats__col">
                 <div class="stats__count">+20</div>
-                <h5>Cafés par personnes</h5> 
+                <h5>Cafés par personne</h5> 
             </center>
                  </div>
 
