--- a/index.html
+++ b/index.html
@@ -353,7 +353,7 @@ Rechargez en ligne votre cagnotte par paiement carte bancaire. Rendez-vous en ag
                         </div>
 
                         <a href="https://www.behance.net/" class="item-folio__project-link" title="Project link">
-                            Step 4
+                            Etape 4
                         </a>
 
                         <span class="item-folio__caption">
