--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 <h3>LIBER'TITRE</h3>
                 
                 <ul class="header-nav__list">
-                    <li class="current"><a class="smoothscroll"  href="#home" title="home">Acceuil</a></li>
+                    <li class="current"><a class="smoothscroll"  href="#home" title="home">Accueil</a></li>
                     <li><a class="smoothscroll"  href="#about" title="about">Notre concept</a></li>
                     <li><a class="smoothscroll"  href="#services" title="services">Notre solution</a></li>
                     <li><a class="smoothscroll"  href="#works" title="works">Mon compte</a></li>
