--- a/index.html
+++ b/index.html
@@ -445,8 +445,8 @@ Rechargez en ligne votre cagnotte par paiement carte bancaire. Rendez-vous en ag
                 <h5>Heures de Hackathon</h5>
             </div>
             <div class="col-block stats__col">
-                <div class="stats__count">+20</div>
-                <h5>Cafés par personne</h5> 
+                <div class="stats__count">93</div>
+                <h5>Cafés pour l'équipe</h5> 
             </center>
                  </div>
 
