--- a/index.html
+++ b/index.html
@@ -481,7 +481,7 @@ Rechargez en ligne votre cagnotte par paiement carte bancaire. Rendez-vous en ag
         <div class="row">
             <div class="col-full cl-copyright">
                 <span><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-Aucuns droits réservé &copy; | <a href="" target="_blank">LIBER'TITRE</a>
+AUCUNS droits réservé &copy; | <a href="" target="_blank">LIBER'TITRE</a>| Cher jury, nous comptons sur vous pour faire le bon choix <3
 <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></span> 
             </div>
         </div>
