--- a/index.html
+++ b/index.html
@@ -461,7 +461,7 @@ Rechargez en ligne votre cagnotte par paiement carte bancaire. Rendez-vous en ag
         <div class="row section-header" data-aos="fade-up">
             <div class="col-full">
                 <h3 class="subhead subhead--light">Nous contacter</h3>
-                <h1 class="display-1 display-1--light">Vous avez des retours sur notre solution ? :-)</h1>
+                <h1 class="display-1 display-1--light">Vous avez des retours sur notre solution ?</h1>
             </div>
         </div> <!-- end section-header -->
 
